--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,16 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+span,
+.primary-color {
+  background-image: linear-gradient(to right, #dd32f3, #ce90cb);
+  -webkit-background-clip: text;
+  color: transparent;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.bg-primary-color {
+  background-image: linear-gradient(to right, #6b2b72, #a5079d);
 }
