--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-span,
+/* span,
 .primary-color {
   background-image: linear-gradient(to right, #dd32f3, #ce90cb);
   -webkit-background-clip: text;
@@ -10,4 +10,22 @@ span,
 }
 .bg-primary-color {
   background-image: linear-gradient(to right, #6b2b72, #a5079d);
+} */
+
+span,
+.primary-color {
+  background-image: linear-gradient(
+    to right,
+    #3399ff,
+    #66ccff
+  ); /* Albastru deschis */
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.bg-primary-color {
+  background-image: linear-gradient(
+    to right,
+    #3366cc,
+    #3399ff
+  ); /* Albastru deschis */
 }
